--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">testfarma_TC2007</string>
+    <string name="app_name">TestFarma_app</string>
 </resources>
