--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TestFarma_app</string>
+    <string name="slogan">Bienvenido a TestFarma</string>
+    <string name="menu">menu</string>
+    <string name="logo">logo</string>
+    <string name="carrito">carrito</string>
+
 </resources>
