Fix: Images to buttons in horizontal nav bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
     <string name="o">Ó</string>
     <string name="continuar_como_invitado">Continuar como invitado</string>
+    <string name="perfil">perfil</string>
 
 </resources>
