--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,16 @@
     <string name="password">Contraseña</string>
     <string name="forgot_password">¿Olvidaste tu contraseña?</string>
     <string name="back">Regresar</string>
+    <string name="crea_tu_cuenta">¡Crea Tu cuenta!</string>
+    <string name="ingresa_t_correo_e">Ingresa Tú Correo E.</string>
+    <string name="registrarse">Registrarse</string>
+    <string name="cancelar">Cancelar</string>
+    <string name="nombre_completo">Nombre Completo.</string>
+    <string name="ingresa_t_n_mero_cel">Ingresa Tú Número Cel.</string>
+    <string name="crea_tu_contrase_a">Crea Tu Contraseña.</string>
+    <string name="ingresa_t_correo_el">Ingresa Tú Correo E.</string>
+    <string name="s">Sí</string>
+    <string name="no">No</string>
+    <string name="he_le_do_y_acepto_el_acuerdo_de_privacidad">He Leído Y acepto el acuerdo de privacidad.</string>
 
 </resources>
