Feat: Added layout para promociones
Fix: Made project adjustments.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="s">Sí</string>
     <string name="no">No</string>
     <string name="he_le_do_y_acepto_el_acuerdo_de_privacidad">He Leído Y acepto el acuerdo de privacidad.</string>
+    <string name="promociones">Promociones</string>
 
 </resources>
