--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,21 @@
         <item>Estudio F</item>
     </string-array>
 
+    <!--Facturas-->
+    <string name="fact">Facturacion</string>
+    <string name="nombrefact">Nombre o Razón social</string>
+    <string name="RFC">RFC</string>
+    <string name="RF">Regimen Fiscal</string>
+    <string name="correo_fact">Correo</string>
+    <string name="CP">Codigo Postal</string>
+    <string name="Send">Generar</string>
+    <string-array name="Regimen">
+        <item>A1</item>
+        <item>A2</item>
+        <item>A3</item>
+        <item>A4</item>
+        <item>A5</item>
+    </string-array>
+
+
 </resources>
