--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="selecciona_la_hora">Selecciona la hora</string>
     <string name="selecciona_el_estudio">Selecciona el estudio</string>
     <string name="selecciona_la_sucursal">Selecciona la sucursal</string>
+    <string name="genera_tu_cita">Genera tu cita</string>
     
     <!--Dropdown_sucursal-->
     <string-array name="sucursal_ar">
