--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="promociones">Promociones</string>
     <string name="resultados">Resultados</string>
     <string name="id_usr">"ID: "</string>
+    <string name="nom_arch">nombre archivo</string>
     <string name="hist_res_usr">"Historial"</string>
     <string name="descarga">Descarga</string>
     <string name="todo">TODO</string>
