--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="prefs_file">com.example.testfarma_app.PREFERENCE_FILE_KEY</string>
     <string name="app_name">TestFarma</string>
     <string name="slogan">Bienvenido a TestFarma</string>
     <string name="menu">menu</string>
@@ -99,6 +100,8 @@
     <string name="guardar_cita">Guardar</string>
     <string name="contacto">CONTACTO</string>
     <string name="telefono">Teléfono: 55 7081 7720</string>
+    <string name="google_login">Iniciar Sesión con Google</string>
+    <string name="googleimg">googleimg</string>
     <string-array name="Regimen">
         <item>A1</item>
         <item>A2</item>
