--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,7 @@
     <string name="texto2Hist">texto2Hist</string>
     <string name="acerca">acerca</string>
     <string name="text1Ace">Testfarma nace para cubrir la necesidad de ir más allá en la venta y distribución de insumos médicos y pruebas de diagnóstico clínico, así como de productos farmacéuticos.</string>
+    <string name="charac">Un caracter especial | Una letra mayúscula | Una letra minúscula | Sin espacios en blanco | 4 caracteres mínimo</string>
 
     <string-array name="Regimen">
         <item>A1</item>
