remove google button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,7 +134,9 @@
     <string name="ingrese_su_fecha_de_nacimiento">Ingrese su fecha de nacimiento</string>
     <string name="ingrese_su_estatura">Ingrese su estatura</string>
     <string name="ingrese_su_peso">Ingrese su peso</string>
->>>>>>> Stashed changes
+    <string name="contrase_a">Contraseña</string>
+    <string name="email1">Email</string>
+    >>>>>>> Stashed changes
 
     <string-array name="Regimen">
         <item>A1</item>
